--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     },
     "devDependencies": {
         "@angular-builders/custom-webpack": "9.1.0",
-        "@angular-devkit/build-angular": "0.901.4",
+        "@angular-devkit/build-angular": "0.901.8",
         "@angular-eslint/builder": "0.0.1-alpha.18",
         "@angular/animations": "9.1.9",
         "@angular/cli": "9.1.4",
@@ -56,7 +56,7 @@
         "@typescript-eslint/parser": "2.27.0",
         "chai": "4.2.0",
         "codelyzer": "5.2.2",
-        "conventional-changelog-cli": "2.0.32",
+        "conventional-changelog-cli": "2.0.34",
         "core-js": "3.6.5",
         "cross-env": "7.0.2",
         "devtron": "1.4.0",
@@ -73,6 +73,7 @@
         "karma-jasmine": "3.1.1",
         "karma-jasmine-html-reporter": "1.5.3",
         "mocha": "7.1.2",
+        "moment": "2.26.0",
         "ng-zorro-antd": "9.1.2",
         "npm-run-all": "4.1.5",
         "rxjs": "6.5.5",
