--- a/package.json
+++ b/package.json
@@ -83,7 +83,8 @@
         "typescript": "3.8.3",
         "wait-on": "4.0.2",
         "webdriver-manager": "12.1.7",
-        "zone.js": "0.10.3"
+        "zone.js": "0.10.3",
+        "achorn": "0.3.2"
     },
     "engines": {
         "node": ">=10.13.0"
