--- a/package.json
+++ b/package.json
@@ -89,5 +89,7 @@
     "engines": {
         "node": ">=10.13.0"
     },
-    "dependencies": {}
+    "dependencies": {
+        "update-electron-app": "1.5.0"
+    }
 }
